--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,25 @@
-/* You can add global styles to this file, and also import other style files */
+*
+  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif
+  transition: all 300ms
+  transition-timing-function: ease
+
+.margin-top-01
+  margin-top: 0.1rem
+.margin-top-02
+  margin-top: 0.2rem
+.margin-top-03
+  margin-top: 0.3rem
+.margin-top-04
+  margin-top: 0.4rem
+.margin-top-05
+  margin-top: 0.5rem
+.margin-top-06
+  margin-top: 0.6rem
+.margin-top-07
+  margin-top: 0.7rem
+.margin-top-08
+  margin-top: 0.8rem
+.margin-top-09
+  margin-top: 0.9rem
+.margin-top-10
+  margin-top: 10rem
