--- a/src/app/componets/admin/create-cereminy/create-cereminy.component.html
+++ b/src/app/componets/admin/create-cereminy/create-cereminy.component.html
@@ -2,15 +2,15 @@
   <div class="card">
     <div class="container-form-item">
       <span class="name-form-item">Nombre</span>
-      <input [formControl]="name" class="input-form-item" type="text" name="" id="" >
+      <input [formControl]="name" class="input-form-item" type="text" name="" >
     </div>
     <div class="container-form-item">
       <span class="name-form-item">Fecha</span>
-      <input [formControl]="date" class="input-form-item" type="datetime-local" name="" id="">
+      <input [formControl]="date" class="input-form-item" type="datetime-local" name="">
     </div>
     <div class="container-form-item">
       <span class="name-form-item">Número de cupos</span>
-      <input [formControl]="placesNumber" class="input-form-item" type="tel" name="" id="">
+      <input [formControl]="placesNumber" class="input-form-item" type="tel" name="">
     </div>
     <div class="container-btns">
       <button class="btn-delete" (click)="closeCard()" >cerrar</button>
