--- a/src/app/componets/shared/notification/notification.component.html
+++ b/src/app/componets/shared/notification/notification.component.html
@@ -1,4 +1,4 @@
-<div [ngClass]="{'done': type == 1,'error': type == 2, 'animation': showNotification}" class="container-notification">
+<div [ngClass]="{'done': type == 1,'error': type == 2,'warning': type == 3, 'animation': showNotification}" class="container-notification">
   <span class="message">
     {{ message }}
   </span>
