--- a/src/styles.sass
+++ b/src/styles.sass
@@ -22,4 +22,18 @@
 .margin-top-09
   margin-top: 0.9rem
 .margin-top-10
-  margin-top: 10rem
+  margin-top: 1rem
+.margin-top-20
+  margin-top: 2rem
+
+.input-hidden
+  width: 0px
+  height: 0px
+
+.container-icon-back
+  display: flex
+  align-items: center
+  .icon-back
+    transform: rotate(180deg)
+    margin-right: .5rem
+    margin-top: .1rem
