--- a/src/styles/btns.sass
+++ b/src/styles/btns.sass
@@ -1,6 +1,8 @@
 .container-btns
   display: flex
   justify-content: space-evenly
+  &.center
+    justify-content: center
 .btn-delete
   color: white
   background-color: #707070
