--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-bottom-bar></app-bottom-bar>
 <app-notification></app-notification>
+<app-loader></app-loader>
 
 <router-outlet></router-outlet>
