--- a/src/styles/popup-card.sass
+++ b/src/styles/popup-card.sass
@@ -30,5 +30,24 @@
         outline: none
         font-size: 1rem
         width: 100%
-    .container-btns
-      margin-top: 1rem
+      .container-checkbox
+        width: 3rem
+        height: 1rem
+        border: 1px solid
+        border-radius: 1rem
+        position: relative
+        .check
+          position: absolute
+          top: -.25rem
+          left: -0.1rem
+          width: 1.5rem
+          height: 1.5rem
+          border-radius: 50%
+          background-color: #707070
+          box-shadow: 0px 2px 7px 1px #00000085
+          transition: all 300ms
+          transition-timing-function: ease
+          &.yes
+            left: 1.6rem
+            transition: all 300ms
+            transition-timing-function: ease
